# compressStatic

./: .autotools  .cproject  .project  README.md  home.md
src/: CMakeLists.txt
src/css/: auto.c  fopen.c  httpURL.c  loadCSS.c  readCSS.c  replaceURLImage.c  testURL.c
src/css/include/: httpURL.h  loadCSS.h  moveImage.h  readCSS.h  replaceURLString.h
src/js/: jsGramer  jsGramer.c  jsGramer.c~  jsKeyWords.h  jsKeyWords.h~  readConfig.c
test/: dns.c  struct  struct.c
