cmake_minimum_required (VERSION 2.6) 
project(COMPRESS_STATIC)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS "--std=c99")
SET(LIBRARY_OUTPUT_PATH lib)
add_executable(target/readConfig js/readConfig.c)
add_library(loadCSS css/loadCSS.c)
add_executable(target/readCSS css/readCSS.c)
add_executable(target/fopen css/fopen.c)
add_executable(target/testURL css/testURL.c)
add_library(httpURL css/httpURL.c)
target_link_libraries(target/readConfig json)
#这个库是openssl　用的函数库
target_link_libraries(loadCSS crypto curl)
target_link_libraries(target/fopen curl)
target_link_libraries(target/readCSS loadCSS httpURL)
target_link_libraries(target/testURL httpURL)
